gitops/apps/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modern-event-consumer
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"modern-event-consumer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modern-event-consumer
  template:
    metadata:
      labels:
        app: modern-event-consumer
    spec:
      containers:
        - name: app
          image: ' '
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: modern-event-consumer
spec:
  selector:
    app: modern-event-consumer
  ports:
    - name: http
      port: 8081
      targetPort: http
