gitops/apps/kaoto-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modern-kaoto-consumer
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"modern-kaoto-consumer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modern-kaoto-consumer
  template:
    metadata:
      labels:
        app: modern-kaoto-consumer
    spec:
      containers:
        - name: app
          image: ' '
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: modern-kaoto-consumer
spec:
  selector:
    app: modern-kaoto-consumer
  ports:
    - name: http
      port: 8083
      targetPort: http
