gitops/apps/producer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modern-queue-producer
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"modern-queue-producer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modern-queue-producer
  template:
    metadata:
      labels:
        app: modern-queue-producer
    spec:
      containers:
        - name: app
          image: ' '
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: modern-queue-producer
spec:
  selector:
    app: modern-queue-producer
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: modern-queue-producer
spec:
  to:
    kind: Service
    name: modern-queue-producer
  port:
    targetPort: http
