gitops/apps/visualizer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modern-visualizer
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"modern-visualizer:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"app\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modern-visualizer
  template:
    metadata:
      labels:
        app: modern-visualizer
    spec:
      containers:
        - name: app
          image: ' '
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: modern-visualizer
spec:
  selector:
    app: modern-visualizer
  ports:
    - name: http
      port: 8082
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: modern-visualizer
spec:
  to:
    kind: Service
    name: modern-visualizer
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
